Swift: make `WIN32_EXECUTABLE` property an error
It is not currently possible to use the tWinMain
entry point with Swift. Making this a hard error will prevent the need for a future policy.
It is not currently possible to use the tWinMain
entry point with Swift. Making this a hard error will prevent the need for a future policy.